k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app
spec:
  type: NodePort
  selector:
    app: notes-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
